# oplss24-code

./: .#1-tinyppl.ml  1-tinyppl.ml  2-tinycond.ml  3-tinysamp.ml  4-tinyreject.ml  5-bdd.ml  5-bigreject.ml  6-bdd.ml  6-tinydice.ml  LICENSE  README.md
1-tinyppl/: tiny-ppl-starter.ml  tinyppl.ml
2-tinycond/: tinycond-starter.ml  tinycond.ml
3-tinysamp/: tinysamp-starter.ml  tinysamp.ml
4-tinyreject/: tinyreject-starter.ml
5-bigreject/: .#bigreject.ml  README.md  bigreject.ml
5-tinycont/: README.md  cont.opam  dune-project
5-tinycont/lib/: core_grammar.ml  direct_sampling.ml  dune  lexer.mll  parser.mly  syntax.ml  util.ml
5-tinycont/programs/: basic.cont
5-tinycont/test/: cont.ml  dune
6-tinymcmc/: tinymcmc.ml
8-tinydice/: tinydice.ml
